<resources>
    <string name="app_name">SP_W7_Order_App_Kotlin</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped cream</string>

    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">ORDER</string>

    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="_2">2</string>
</resources>